# merf

./: .gitignore  PLANNING.md  README.md  pyproject.toml
.merf/: sort-numbers.json
benchmarks/: sort_numbers.py
src/merf/: cli.py  collector.py  runner.py  stats.py  storage.py
tests/: test_cli.py  test_collector.py  test_runner.py  test_stats.py  test_storage.py
