[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merf"
version = "0.1.0"
description = "A minimal performance regression testing tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
merf = "merf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/merf"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
